--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -40,7 +40,7 @@
     </section>
 
     <section class="meta">
-      <a href="https://lnkd.in/{{ site.linkedin }}" target="_blank"><img src="/images/linkedin.png" /></a>
+      <a href="https://www.linkedin.com/in/{{ site.linkedin }}" target="_blank"><img src="/images/linkedin.png" /></a>
       <a href="https://twitter.com/{{ site.twitter }}" target="_blank"><img src="/images/twitter.png"></a>
       <a href="https://github.com/{{ site.github }}" target="_blank"><img src="/images/github.png" /></a>
       <a href="/atom.xml"><img src="/images/rss.png" /></a>
