Post footer modification and a little intro on the homepage

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@ layout: layout
       </a>
 
       <p>
-        Proud father of two, I am a team leader <a href="https://twitter.com/Decitre" target="_blank">Decitre</a>, specialized in solving people problems with (mostly) technical responses.
+        Proud father of two, I am a team leader, specialized in solving people problems with (mostly) technical responses.
       </p>
 
       <a href="http://twitter.com/share" class="twitter-share-button" data-count="none" data-via="{{ site.twitter }}">Tweet</a>
