--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -23,6 +23,7 @@
   <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lazyloadjs/3.2.2/lazyload.js"></script>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script type="text/javascript" src="/js/application.js"></script>
 </head>
