Respect image ratio

--- a/css/base.css
+++ b/css/base.css
@@ -114,7 +114,8 @@ a {
   .content img {
     padding: 3px;
     border: 1px solid #eeeeee;
-    max-width: 100%; }
+    max-width: 100%;
+    height:auto; }
   .content hr {
     border: 0;
     height: 6px;
