--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
+  <link href="https://cdnjs.cloudflare.com" rel="preconnect" crossorigin>
+
   <meta charset="utf-8">
   <title>
     {% if page.title %}
@@ -22,6 +24,7 @@
   <link media="only screen and (device-width: 768px)" href="/css/mobile.css" type="text/css" rel="stylesheet" />
   <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.css" type="text/css" />
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lazyloadjs/3.2.2/lazyload.js"></script>
 </head>
@@ -65,6 +68,8 @@
       ga('send', 'pageview');
 
   </script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.js"></script>
 </body>
 
 </html>
