Lazyloadjs must be served minified

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -44,7 +44,7 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.css" type="text/css" />
 
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lazyloadjs/3.2.2/lazyload.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lazyloadjs/3.2.2/lazyload.min.js"></script>
 </head>
 
 <body>
