Display comments on blog post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,27 @@ layout: layout
 
   {{ content }}
 
+  <section class="comments">
+    <h3>Comments</h3>
+
+    {% assign comments = site.data.comments[page.slug] | where:"replying_to","" %}
+
+    {% for comment in comments %}
+    <div class="comment">
+      {% include comment.html comment=comment %}
+
+      <div class="comment-replies">
+        {% assign replies = site.data.comments[page.slug] | where:"replying_to",comment._id %}
+
+        {% for reply in replies %}
+          {% include comment.html comment=reply %}
+        {% endfor %}
+      </div>
+
+    </div>
+    {% endfor %}
+  </section>
+
   <section class="meta">
     <h3>Discussion, links, and tweets</h3>
     <section class="copy">
