--- a/css/custom.css
+++ b/css/custom.css
@@ -55,3 +55,46 @@ tr:nth-child(even) {
 .comment-body blockquote p {
   margin: 0;
 }
+.new-comment fieldset {
+  border: none;
+  margin: 0;
+  padding: 10px 0;
+}
+.new-comment input, .new-comment textarea {
+  font-size: 14px;
+  display: block;
+  width: 100%;
+  border: 1px solid #aaa;
+  border-radius: 3px;
+}
+.new-comment input {
+  height: 25px;
+}
+.new-comment label {
+  display: block;
+}
+.new-comment button {
+  border: 2px solid #aaa;
+  background: #eee;
+  padding: 10px 40px;
+  font-size: 16px;
+  font-family: inherit;
+  border-radius: 4px;
+  margin: 5px 0;
+}
+form .info {
+  padding: 10px 20px;
+  margin: 10px 0;
+  font-weight: bold;
+  border-radius: 4px;
+}
+form .info-success {
+  border: 1px solid #c3e6cb;
+  background: #d4edda;
+  color: #155724;
+}
+form .info-error {
+  border: 1px solid #f5c6cb;
+  background: #f8d7da;
+  color: #721c24;
+}
