--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -81,9 +81,9 @@ layout: layout
         Proud father of two, I am a team leader, specialized in solving people problems with (mostly) technical responses.
       </p>
 
-      <a href="http://twitter.com/share" class="twitter-share-button" data-count="none" data-via="{{ site.twitter }}">Tweet</a>
-      <a href="http://twitter.com/{{ site.twitter }}" class="twitter-follow-button" data-show-count="false">Follow @{{ site.twitter }}</a>
-      <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
+      <a href="https://twitter.com/share" class="twitter-share-button" data-count="none" data-via="{{ site.twitter }}">Tweet</a>
+      <a href="https://twitter.com/{{ site.twitter }}" class="twitter-follow-button" data-show-count="false">Follow @{{ site.twitter }}</a>
+      <script src="https://platform.twitter.com/widgets.js" type="text/javascript"></script>
     </section>
   </section>
 </section>
