--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -71,6 +71,7 @@
       <ul>
         <li><a href="/about.html">about</a></li>
         <li><a href="/">posts</a></li>
+        <li><a href="/tags.html">tags</a></li>
       </ul>
     </section>
   </section>
